Triggering Netbox synchronization

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,3 +34,6 @@ Style/Next:
 # Support both ruby19 and hash_rockets
 Style/HashSyntax:
   Enabled: false
+
+Style/FormatStringToken:
+  EnforcedStyle: template
