--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: CI
 on: push
 env:
-  FOREMAN_PLUGIN_NAME: foreman_netbox
+  RAILS_ENV: test
+  DATABASE_URL: postgresql://postgres:@localhost/test
+  DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: true
 jobs:
   rubocop:
     runs-on: ubuntu-latest
@@ -10,7 +12,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6
+          ruby-version: 2.3
       - name: Setup
         run: |
           gem install bundler
@@ -37,6 +39,7 @@ jobs:
           - foreman-core-branch: develop
             ruby-version: 2.3
     steps:
+      - run: sudo apt-get install build-essential libcurl4-openssl-dev libvirt-dev ruby-libvirt zlib1g-dev libpq-dev
       - uses: actions/checkout@v2
         with:
           repository: netbox-community/netbox-docker
@@ -61,7 +64,7 @@ jobs:
           ref: ${{ matrix.foreman-core-branch }}
       - uses: actions/checkout@v2
         with:
-          path: ${{ env.FOREMAN_PLUGIN_NAME }}
+          path: foreman_netbox
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -70,12 +73,24 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version:  ${{ matrix.node-version }}
-      - name: Setup Foreman Plugin
-        uses: kamils-iRonin/setup-foreman-plugin@master
-        with:
-          plugin-name: ${{ env.FOREMAN_PLUGIN_NAME }}
+      - name: Setup Plugin
+        run: |
+          echo "gem 'foreman_netbox', path: './foreman_netbox'" > bundler.d/foreman_netbox.local.rb
+          gem install bundler
+          bundle config set without journald development console mysql2 sqlite
+          bundle install --jobs=3 --retry=3
+          bundle exec rake db:create
+          bundle exec rake db:migrate
+          npm install
+          bundle exec rake webpack:compile
       - name: Run plugin tests
-        run: bundle exec rake test:${FOREMAN_PLUGIN_NAME}
+        run: |
+          bundle exec rake test:foreman_netbox
+          bundle exec rake test TEST="test/unit/foreman/access_permissions_test.rb"
         env:
           FOREMAN_NETBOX_URL: http://0.0.0.0:8000
           FOREMAN_NETBOX_TOKEN: 0123456789abcdef0123456789abcdef01234567
+      - name: Precompile plugin assets
+        run: bundle exec rake 'plugin:assets:precompile[foreman_netbox]'
+        env:
+          RAILS_ENV: production
