--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,8 @@
 require: rubocop-rails
 
+AllCops:
+  TargetRubyVersion: 2.6
+
 Rails:
   Enabled: true
 
@@ -43,6 +46,9 @@ Style/HashSyntax:
 
 Style/FormatStringToken:
   EnforcedStyle: template
+
+Style/CaseLikeIf:
+  Enabled: false
 
 Gemspec/RequiredRubyVersion:
   Enabled: false
