--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: rubocop
-    timeout-minutes: 20
+    timeout-minutes: 60
     services:
       postgres:
         image: postgres:12.1
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        foreman-core-branch: [1.24-stable, 2.0-stable, 2.1-stable, 2.2-stable, 2.3-stable, 2.4-stable, develop]
+        foreman-core-branch: [1.24-stable, 2.0-stable, 2.1-stable, 2.2-stable, 2.3-stable, 2.4-stable, 2.5-stable, 3.0-stable, develop]
         ruby-version: [2.5, 2.6]
         node-version: [10]
     steps:
@@ -43,23 +43,22 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: netbox-community/netbox-docker
-          ref: 0.24.1
+          ref: 1.2.0
           path: netbox-docker
       - name: Setup Netbox
         working-directory: netbox-docker
-        env:
-          VERSION: v2.8.5
         run: |
           tee docker-compose.override.yml <<EOF
           version: '3.4'
           services:
-            nginx:
+            netbox:
+              image: netboxcommunity/netbox:v2.11.12
               ports:
               - 8000:8080
           EOF
           docker-compose pull
           docker-compose up -d
-          sleep 90
+          sleep 180
       - uses: actions/checkout@v2
         with:
           repository: theforeman/foreman
