--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,24 +5,8 @@ env:
   DATABASE_URL: postgresql://postgres:@localhost/test
   DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: true
 jobs:
-  rubocop:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7
-      - name: Setup
-        run: |
-          gem install bundler
-          bundle install --jobs=3 --retry=3
-      - name: Run rubocop
-        run: bundle exec rubocop
   test:
     runs-on: ubuntu-latest
-    needs: rubocop
     timeout-minutes: 60
     services:
       postgres:
@@ -105,6 +89,9 @@ jobs:
           bundle exec rake db:migrate
           npm install
           bundle exec rake webpack:compile
+      - name: Run rubocop
+        run: bundle exec rake foreman_netbox:rubocop
+        if: ${{ matrix.foreman-core-branch == 'develop' }}
       - name: Run plugin tests
         run: |
           bundle exec rake test:foreman_netbox
