--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        foreman-core-branch: [2.3-stable, 2.4-stable, 2.5-stable, 3.0-stable, 3.1-stable, 3.2-stable, 3.3-stable, 3.4-stable, develop]
+        foreman-core-branch: [3.1-stable, 3.2-stable, 3.3-stable, 3.4-stable, develop]
         ruby-version: [2.7]
         node-version: [14]
     steps:
@@ -61,15 +61,8 @@ jobs:
           sleep 180
       - uses: actions/checkout@v2
         with:
-          clean: false
           repository: theforeman/foreman
           ref: ${{ matrix.foreman-core-branch }}
-          fetch-depth: 0
-      - name: Apply patches for Foreman < 3.0
-        if: ${{ contains(fromJson('["2.2-stable", "2.3-stable", "2.4-stable", "2.5-stable"]'), matrix.foreman-core-branch) }}
-        run: |
-          git cherry-pick -n bad15051387b21563ffc0843a60f9dccfb2d3e17 # pin rdoc to use psych < 4.0.0
-          git cherry-pick -n f5a3dd2dedb569a0e6c5e8bb311c1da75906fc4f # use webpack-dev-server-without-h2
       - uses: actions/checkout@v2
         with:
           path: foreman_netbox
