--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        foreman-core-branch: [3.1-stable, 3.2-stable, 3.3-stable, 3.4-stable, develop]
+        foreman-core-branch: [3.1-stable, 3.2-stable, 3.3-stable, 3.4-stable, 3.5-stable, 3.6-stable, develop]
         ruby-version: [2.7]
         node-version: [14]
     steps:
