--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,24 +5,8 @@ env:
   DATABASE_URL: postgresql://postgres:@localhost/test
   DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: true
 jobs:
-  rubocop:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7
-      - name: Setup
-        run: |
-          gem install bundler
-          bundle install --jobs=3 --retry=3
-      - name: Run rubocop
-        run: bundle exec rubocop
   test:
     runs-on: ubuntu-latest
-    needs: rubocop
     timeout-minutes: 60
     services:
       postgres:
@@ -40,7 +24,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential libcurl4-openssl-dev libvirt-dev ruby-libvirt zlib1g-dev libpq-dev
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           repository: netbox-community/netbox-docker
           ref: 2.2.0
@@ -59,11 +43,11 @@ jobs:
           docker-compose pull
           docker-compose up -d
           sleep 180
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           repository: theforeman/foreman
           ref: ${{ matrix.foreman-core-branch }}
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           path: foreman_netbox
       - name: Setup Ruby
@@ -71,11 +55,11 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby-version }}
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version:  ${{ matrix.node-version }}
       - name: Cache node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
@@ -92,7 +76,7 @@ jobs:
           echo "gem 'foreman_netbox', path: './foreman_netbox'" > bundler.d/foreman_netbox.local.rb
           bundle lock --update
       - name: Cache gems
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
@@ -105,6 +89,9 @@ jobs:
           bundle exec rake db:migrate
           npm install
           bundle exec rake webpack:compile
+      - name: Run rubocop
+        run: bundle exec rake foreman_netbox:rubocop
+        if: ${{ matrix.foreman-core-branch == 'develop' }}
       - name: Run plugin tests
         run: |
           bundle exec rake test:foreman_netbox
