--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,110 +1,34 @@
-name: CI
-on: [push, pull_request]
-env:
-  RAILS_ENV: test
-  DATABASE_URL: postgresql://postgres:@localhost/test
-  DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: true
+name: Ruby test
+
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+
+concurrency:
+  group: ${{ github.ref_name }}-${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
+  rubocop:
+    uses: theforeman/actions/.github/workflows/rubocop.yml@v0
+    with:
+      command: bundle exec rubocop --parallel --format github
+
   test:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    services:
-      postgres:
-        image: postgres:12.1
-        ports: ['5432:5432']
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    name: Ruby
+    needs: rubocop
     strategy:
       fail-fast: false
       matrix:
-        foreman-core-branch: [3.1-stable, 3.2-stable, 3.3-stable, 3.4-stable, 3.5-stable, 3.6-stable, develop]
-        ruby-version: [2.7]
-        node-version: [14]
-    steps:
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libcurl4-openssl-dev libvirt-dev ruby-libvirt zlib1g-dev libpq-dev
-      - uses: actions/checkout@v3
-        with:
-          repository: netbox-community/netbox-docker
-          ref: 2.2.0
-          path: netbox-docker
-      - name: Setup Netbox
-        working-directory: netbox-docker
-        run: |
-          tee docker-compose.override.yml <<EOF
-          version: '3.4'
-          services:
-            netbox:
-              image: netboxcommunity/netbox:v3.3.5-2.2.0
-              ports:
-              - 8000:8080
-          EOF
-          docker-compose pull
-          docker-compose up -d
-          sleep 180
-      - uses: actions/checkout@v3
-        with:
-          repository: theforeman/foreman
-          ref: ${{ matrix.foreman-core-branch }}
-          fetch-depth: 0
-      - name: Apply patches for Foreman < 3.5
-        if: ${{ contains(fromJson('["3.1-stable", "3.2-stable", "3.3-stable", "3.4-stable"]'), matrix.foreman-core-branch) }}
-        run: |
-          git cherry-pick --strategy=recursive -X theirs -n 1c3a4155f286352e0abbf0d0b298e47e81c2d6c5 # https://github.com/theforeman/foreman/pull/9781
-      - uses: actions/checkout@v3
-        with:
-          path: foreman_netbox
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: ${{ matrix.ruby-version }}
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version:  ${{ matrix.node-version }}
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: Build foreman_netbox gem
-        run: gem build foreman_netbox.gemspec
-        working-directory: foreman_netbox
-      - name: Setup Bundler
-        run: |
-          gem install bundler
-          bundle config path vendor/bundle
-          bundle config set without journald development console mysql2 sqlite
-          echo "gem 'foreman_netbox', path: './foreman_netbox'" > bundler.d/foreman_netbox.local.rb
-          bundle lock --update
-      - name: Cache gems
-        uses: actions/cache@v3
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-      - name: Setup Plugin
-        run: |
-          bundle install --jobs=3 --retry=3
-          bundle exec rake db:create
-          bundle exec rake db:migrate
-          npm install
-          bundle exec rake webpack:compile
-      - name: Run rubocop
-        run: bundle exec rake foreman_netbox:rubocop
-        if: ${{ matrix.foreman-core-branch == 'develop' }}
-      - name: Run plugin tests
-        run: |
-          bundle exec rake test:foreman_netbox
-          bundle exec rake test TEST="test/unit/foreman/access_permissions_test.rb"
-        env:
-          FOREMAN_NETBOX_URL: http://0.0.0.0:8000
-          FOREMAN_NETBOX_TOKEN: 0123456789abcdef0123456789abcdef01234567
-      - name: Precompile plugin assets
-        run: bundle exec rake 'plugin:assets:precompile[foreman_netbox]'
-        env:
-          RAILS_ENV: production
+        foreman:
+          - "develop"
+          - "3.14-stable"
+          - "3.13-stable"
+    uses: ./.github/workflows/foreman_plugin_netbox.yml
+    with:
+      plugin: foreman_netbox
+      foreman_version: ${{ matrix.foreman }}
+      environment_variables: |
+        FOREMAN_VERSION=${{ matrix.foreman }}
